--- a/task-4.html
+++ b/task-4.html
@@ -11,15 +11,20 @@
     <p><a href="index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="label">
         Email
-        <input type="email" name="email" />
+        <input class="label-input" type="email" name="email" autocomplete />
       </label>
-      <label>
+      <label class="label">
         Password
-        <input type="password" name="password" />
+        <input
+          class="label-input"
+          type="password"
+          name="password"
+          autocomplete
+        />
       </label>
-      <button type="submit">Login</button>
+      <button class="btn-log" type="submit">Login</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
