--- a/task-4.html
+++ b/task-4.html
@@ -13,7 +13,7 @@
     <form class="login-form">
       <label class="label">
         Email
-        <input class="label-input" type="email" name="email" autocomplete />
+        <input class="label-input" type="email" name="email" />
       </label>
       <label class="label">
         Password
