--- a/task-5.html
+++ b/task-5.html
@@ -12,11 +12,9 @@
 
     <div class="widget">
       <p class="widget-txt">Background color: <span class="color">-</span></p>
-      <button class="widget-btn" type="button" class="change-color">
-        Change color
-      </button>
+      <button type="button" class="change-color">Change color</button>
     </div>
 
-    <script src="./js/task-5.js" type="module"></script>
+    <script src="./js/task-5.js" type="module" defer></script>
   </body>
 </html>
